Distribution
- Docker image
- Spring Boot app